--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
-[project]
+[tool.poetry]
 name = "fast-api"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "jvecodev",email = "jvitor.oliveira1803@gmail.com"}
-]
+description = "FastAPI application with MongoDB"
+authors = ["jvecodev <jvitor.oliveira1803@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.13, <4.0"
-dependencies = [
-    "fastapi[standard] (>=0.115.14,<0.116.0)"
-]
+packages = [{include = "fast_api"}]
 
+[tool.poetry.dependencies]
+python = "^3.12"
+fastapi = {extras = ["standard"], version = "^0.115.14"}
+pydantic-settings = "^2.10.1"
+uvicorn = {extras = ["standard"], version = "^0.35.0"}
+motor = "^3.7.1"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
